--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,7 +14,7 @@ teloxide = { version = "0.7.0", default-features = false, features = ["ctrlc_han
 log = "0.4.14"
 tokio = { version =  "1.15.0", features = ["rt-multi-thread", "macros"] }
 tokio-stream = "0.1.7"
-rand = "0.8.4"
+rand = "0.8.5"
 serde = { version = "1.0.132", features = ["derive"] }
 serde_json = "1.0.73"
 serde_cbor = "0.11.2"
@@ -31,6 +31,7 @@ tracing-futures = "0.2.5"
 tracing-subscriber = { version = "0.3.3", features = ["fmt", "tracing-log", "registry", "std"] }
 tracing-log = "0.1.2"
 async-trait = "0.1.52"
+alea = "0.2.2"
 
 [profile.release]
 debug = true
