--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,11 +6,11 @@ edition = "2021"
 [dependencies]
 anyhow = "1.0.51"
 thiserror = "1.0.30"
-config = "0.12.0"
+config = "0.13.1"
 chrono = "0.4.19"
 clokwerk = "0.3.5"
-teloxide-core = { version = "0.4.1", default-features = false }
-teloxide = { version = "0.7.0", default-features = false, features = ["ctrlc_handler", "rustls", "macros", "dispatching2", "cache-me"] }
+teloxide-core = { version = "=0.6.0", default-features = false }
+teloxide = { version = "=0.9.0", default-features = false, features = ["ctrlc_handler", "rustls", "macros", "cache-me"] }
 log = "0.4.14"
 tokio = { version =  "1.15.0", features = ["rt-multi-thread", "macros"] }
 tokio-stream = "0.1.7"
@@ -20,12 +20,12 @@ serde_json = "1.0.73"
 serde_cbor = "0.11.2"
 reqwest = { version = "0.11.7", default-features = false, features = ["rustls-tls", "json", "serde_json"] }
 futures = "0.3.19"
-sea-query = { version = "0.22.0", features = ["with-chrono"] }
-bb8 = "0.7.1"
-bb8-postgres = "0.7.0"
-bb8-redis = "0.10.1"
-rust-embed = "6.3.0"
-sentry = { version = "0.25.0", default-features = false, features = ["anyhow", "reqwest", "rustls", "backtrace", "contexts", "panic", "log", "tracing"] }
+sea-query = { version = "=0.24.6", features = ["with-chrono"] }
+bb8 = "=0.8.0"
+bb8-postgres = "=0.8.0"
+bb8-redis = "=0.11.0"
+rust-embed = "=6.4.0"
+sentry = { version = "=0.26.0", default-features = false, features = ["anyhow", "reqwest", "rustls", "backtrace", "contexts", "panic", "log", "tracing"] }
 tracing = "0.1.29"
 tracing-futures = "0.2.5"
 tracing-subscriber = { version = "0.3.3", features = ["fmt", "tracing-log", "registry", "std"] }
