--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,34 +4,34 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-anyhow = "1.0.51"
-thiserror = "1.0.30"
-config = "0.13.1"
-chrono = "0.4.19"
-clokwerk = "0.3.5"
-teloxide-core = { version = "=0.6.0", default-features = false }
-teloxide = { version = "=0.9.0", default-features = false, features = ["ctrlc_handler", "rustls", "macros", "cache-me"] }
-log = "0.4.14"
-tokio = { version =  "1.15.0", features = ["rt-multi-thread", "macros"] }
-tokio-stream = "0.1.7"
-rand = "0.8.5"
-serde = { version = "1.0.132", features = ["derive"] }
-serde_json = "1.0.73"
-serde_cbor = "0.11.2"
-reqwest = { version = "0.11.7", default-features = false, features = ["rustls-tls", "json", "serde_json"] }
-futures = "0.3.19"
-sea-query = { version = "=0.24.6", features = ["with-chrono"] }
+anyhow = "=1.0.58"
+thiserror = "=1.0.31"
+config = "=0.13.1"
+chrono = "=0.4.19"
+clokwerk = "=0.3.5"
+teloxide-core = { version = "=0.6.2", default-features = false }
+teloxide = { version = "=0.9.2", default-features = false, features = ["ctrlc_handler", "rustls", "macros", "cache-me"] }
+log = "=0.4.17"
+tokio = { version =  "=1.19.2", features = ["rt-multi-thread", "macros"] }
+tokio-stream = "=0.1.9"
+rand = "=0.8.5"
+serde = { version = "=1.0.137", features = ["derive"] }
+serde_json = "=1.0.81"
+serde_cbor = "=0.11.2"
+reqwest = { version = "=0.11.11", default-features = false, features = ["rustls-tls", "json", "serde_json"] }
+futures = "=0.3.21"
+sea-query = { version = "=0.25.0", features = ["with-chrono"] }
 bb8 = "=0.8.0"
-bb8-postgres = "=0.8.0"
+bb8-postgres = "=0.8.1"
 bb8-redis = "=0.11.0"
 rust-embed = "=6.4.0"
-sentry = { version = "=0.26.0", default-features = false, features = ["anyhow", "reqwest", "rustls", "backtrace", "contexts", "panic", "log", "tracing"] }
-tracing = "0.1.29"
-tracing-futures = "0.2.5"
-tracing-subscriber = { version = "0.3.3", features = ["fmt", "tracing-log", "registry", "std"] }
-tracing-log = "0.1.2"
-async-trait = "0.1.52"
-alea = "0.2.2"
+sentry = { version = "=0.27.0", default-features = false, features = ["anyhow", "reqwest", "rustls", "backtrace", "contexts", "panic", "log", "tracing"] }
+tracing = "=0.1.35"
+tracing-futures = "=0.2.5"
+tracing-subscriber = { version = "=0.3.11", features = ["fmt", "tracing-log", "registry", "std"] }
+tracing-log = "=0.1.3"
+async-trait = "=0.1.56"
+alea = "=0.2.2"
 
 [profile.release]
 debug = true
