--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,7 +4,7 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-anyhow = "=1.0.70"
+anyhow = { version = "=1.0.70", features = ["backtrace"] }
 thiserror = "=1.0.40"
 config = "=0.13.3"
 chrono = "=0.4.24"
