--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,34 +4,34 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-anyhow = { version = "=1.0.71", features = ["backtrace"] }
-thiserror = "=1.0.40"
-config = "=0.13.3"
-chrono = "=0.4.26"
+anyhow = { version = "=1.0.83", features = ["backtrace"] }
+thiserror = "=1.0.60"
+config = "=0.14.0"
+chrono = "=0.4.38"
 clokwerk = "=0.4.0"
 teloxide-core = { version = "=0.9.1", default-features = false }
 teloxide = { version = "=0.12.2", default-features = false, features = ["ctrlc_handler", "rustls", "macros", "cache-me"] }
-tokio = { version =  "=1.28.2", features = ["rt-multi-thread", "macros"] }
-tokio-stream = "=0.1.14"
+tokio = { version =  "=1.37.0", features = ["rt-multi-thread", "macros"] }
+tokio-stream = "=0.1.15"
 rand = "=0.8.5"
-serde = { version = "=1.0.164", features = ["derive"] }
-serde_json = "=1.0.97"
+serde = { version = "=1.0.202", features = ["derive"] }
+serde_json = "=1.0.117"
 serde_cbor = "=0.11.2"
-reqwest = { version = "=0.11.17", default-features = false, features = ["rustls-tls", "json", "serde_json"] }
-futures = "=0.3.28"
-sea-query = { version = "=0.28.5", features = ["with-chrono"] }
-bb8 = "=0.8.1"
+reqwest = { version = "=0.12.4", default-features = false, features = ["rustls-tls", "json"] }
+futures = "=0.3.30"
+sea-query = { version = "=0.30.7", features = ["with-chrono"] }
+bb8 = "=0.8.3"
 bb8-postgres = "=0.8.1"
-bb8-redis = "=0.13.1"
-rust-embed = "=6.7.0"
-sentry = { version = "=0.31.5", default-features = false, features = ["anyhow", "reqwest", "rustls", "backtrace", "contexts", "panic", "log", "tracing"] }
-tracing = "=0.1.37"
+bb8-redis = "=0.15.0"
+rust-embed = "=8.4.0"
+sentry = { version = "=0.32.3", default-features = false, features = ["anyhow", "reqwest", "rustls", "backtrace", "contexts", "panic", "log", "tracing"] }
+tracing = "=0.1.40"
 tracing-futures = "=0.2.5"
-tracing-subscriber = { version = "=0.3.17", features = ["fmt", "tracing-log", "registry", "std"] }
-tracing-log = "=0.1.3"
-async-trait = "=0.1.68"
+tracing-subscriber = { version = "=0.3.18", features = ["fmt", "tracing-log", "registry", "std"] }
+tracing-log = "=0.2.0"
+async-trait = "=0.1.80"
 alea = "=0.2.2"
-regex = "=1.8.4"
+regex = "=1.10.4"
 
 # [profile.release]
 # opt-level = 3
