--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,7 +21,7 @@ reqwest = { version = "=0.12.4", default-features = false, features = ["rustls-t
 futures = "=0.3.30"
 bb8 = "=0.8.3"
 bb8-redis = "=0.15.0"
-sentry = { version = "=0.32.3", default-features = false, features = ["anyhow", "reqwest", "rustls", "backtrace", "contexts", "panic", "log", "tracing"] }
+sentry = { version = "0.34", default-features = false, features = ["anyhow", "reqwest", "rustls", "backtrace", "contexts", "panic", "log", "tracing"] }
 tracing = "=0.1.40"
 tracing-futures = "=0.2.5"
 tracing-subscriber = { version = "=0.3.18", features = ["fmt", "tracing-log", "registry", "std"] }
@@ -30,6 +30,7 @@ async-trait = "=0.1.80"
 alea = "=0.2.2"
 regex = "=1.10.4"
 sqlx = { version = "0.7", features = [ "runtime-tokio", "tls-rustls", "migrate", "postgres", "macros" ] }
+build-time = "0.1.3"
 
 # [profile.release]
 # opt-level = 3
